# titanium-quoridor

./: .gitignore  Cargo.toml  LICENSE  README.md  probe_ws.js
benches/: cat_build.rs  flood_modes.rs  perft_full_compare.rs  perft_pawn_modes.rs  perft_pawn_only.rs  tt_speedup.rs
benchmark/: compare_moves.mjs  decode_canta_probe.mjs  ingest_mined_book.mjs  ishtar_opening_mine.mjs  overnight_iterate.mjs  parallel_gorisanson.mjs  parallel_ishtar.mjs  parallel_selfplay.mjs  show_board.mjs  sweep_vs_gorisanson.mjs  titanium_vs_gorisanson.mjs  titanium_vs_ishtar.mjs  tune_ishtar.mjs  tune_minimax.mjs  tune_selfplay.mjs
benchmark/book_sources/: tournament_replays.json
benchmark/lib/: gorisanson_ai.mjs  ishtar_remote.mjs  match_engine.mjs  sweep_worker.mjs  terminal_reporter.mjs  titanium_ai.mjs
benchmark/overnight/: STATUS.md  best_pierce.json  checkpoint.json  history.jsonl
docs/: DESIGN.md  L3-PROOF-HARNESS.md  MOVEGEN-HANDOFF.md  MOVEGEN.md  STATE.md  applied-0002-ace-v11-port.patch
docs/video/: 01-path-bfs.md  02-legal-moves.md  03-perft.md  04-bench.md  08-greedy-ui-lab.md  09-pondering-prep.md  CAT-v3-wall-shape.md  PERFT-OPTIMIZATIONS.md  README.md
engine/: Cargo.toml
engine/benches/: path_bfs.rs
engine/src/: board.rs  canta_oracle.rs  engine.rs  genmove.rs  greedy.rs  grid.rs  lib.rs  main.rs  mcts.rs  moves.rs  opening.rs  path.rs  search.rs  test_replay.rs
engine/src/search/: alphabeta.rs  lmr_profile.rs  lmr_viz.rs  mod.rs  root_cap.rs  session.rs
src/: bench_instr.rs  friend_perft.rs  lib.rs  main.rs  test_replay.rs  wasm.rs
src/ace/: game.rs  mod.rs  race.rs  search.rs  session.rs
src/acev13/: cert_bridge.rs  mod.rs  net.rs  reduction_sidecar.rs  search.rs  session.rs  session_v15.rs
src/cat/: build.rs  prune.rs
src/core/: board.rs
src/movegen/: legal.rs  mod.rs  pawn_bits.rs
src/movegen/o1/: embedded.rs  generated_tables_data.rs  lookup.rs  mod.rs  runtime.rs
src/opening/: book.rs
src/path/: distance.rs  masks.rs  mod.rs  parallel.rs
src/search/: alphabeta.rs  cat_index_lmr.rs  lmr_viz.rs  mod.rs  tt.rs  uci.rs  v16_lmr.rs
src/titanium/: dataset_state.rs  dist.rs  mod.rs  net.rs  opening_book.rs  opening_book_embedded.rs  packed_state.rs  race.rs  search.rs
src/util/: grid.rs  perft.rs
web/: smoke-ai-browser.mjs  smoke-ai.mjs  smoke-diag.json  vite-titanium-proxy.mjs
web/src/: styles.css
web/src/game/: appController.js
web/src/lib/: engineClient.js  enginePonder.js  lmrHeatmap.js  localMctsEngine.js  playerRegistry.js  timeControl.js  titaniumRustClient.js
web/src/ui/: boardView.js  controlsView.js  gameFooter.js
web/src/workers/: gorisansonWorker.js
