[package]
name = "titanium"
version = "0.2.0"
edition = "2021"
description = "Titanium Engine — hybrid Quoridor AI (alpha-beta + guided MCTS)"
license = "GPL-3.0-or-later"

[profile.release]
lto = "fat"
codegen-units = 1

# Release optimizations + full debuginfo for samply / cargo-flamegraph (symbolicated stacks).
[profile.profiling]
inherits = "release"
debug = 2
strip = false
lto = "fat"
codegen-units = 1

[lib]
name = "titanium"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "titanium"
path = "src/main.rs"
required-features = ["parallel"]

[[bin]]
name = "movegen-o1-gen"
path = "src/bin/movegen_o1_gen.rs"

[[bin]]
name = "search_bench"
path = "src/bin/search_bench.rs"
required-features = ["parallel"]

[features]
default = ["parallel"]
# Per-op call counts and phase timers for search_bench (compiled out when disabled).
bench-instrument = []
# Multi-threaded perft / Lazy SMP (rayon). Normal wasm builds leave this off;
# browser Lazy SMP uses the explicit wasm-threads profile below.
parallel = ["dep:rayon"]
# Bake the precomputed pawn O1 tables (~1.85MB) into the binary instead of
# building them at cold start. Use for prewarmed / latency-sensitive targets
# (e.g. the website); the default build computes them on first use / `prewarm()`.
embed-tables = []
# wasm-bindgen bindings for the website (build with:
#   wasm-pack build --no-default-features --features wasm
# or cargo build --lib --target wasm32-unknown-unknown --no-default-features --features wasm)
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
# Browser Lazy SMP: WebAssembly atomics + wasm-bindgen-rayon worker pool.
wasm-threads = ["wasm", "parallel", "dep:wasm-bindgen-rayon"]

[dependencies]
rand = "0.8"
sha2 = "0.10"
rayon = { version = "1.10", optional = true }
wasm-bindgen = { version = "=0.2.100", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
core_affinity = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
core_affinity = "0.8"
criterion = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }

[[bench]]
name = "path_bfs"
harness = false

[[bench]]
name = "perft_pawn_modes"
harness = false

[[bench]]
name = "perft_pawn_only"
harness = false

[[bench]]
name = "flood_modes"
harness = false

[[bench]]
name = "tt_speedup"
harness = false

[[bench]]
name = "perft_full_compare"
harness = false

[[bench]]
name = "cat_build"
harness = false
