[package]
name = "titanium"
version = "0.1.0"
edition = "2021"
description = "Titanium Engine ? hybrid Quoridor AI (alpha-beta + guided MCTS)"
license = "MIT OR Apache-2.0"

[lib]
name = "titanium"
path = "src/lib.rs"

[[bin]]
name = "titanium"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "path_bfs"
harness = false
